@@ -1,3 +1,8 @@
+2006-04-23  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_c2s.erl: Resend messages when leaving negative
+	presence state (thanks to Magnus Henoch)
+
 2006-04-23  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/msgs/fr.msg: Updated
